--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h6,
   height: 400px;
   line-height: 400px;
   text-align: center;
-  background-image: url('img/hero.png');
+  background-image: url('img/hero.jpg');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
